<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cgal5_ament</name>
  <version>0.0.0</version>
  <description>Catkin wrapper for CGAL 5.</description>
  <maintainer email="60728884+HomeworldL@users.noreply.github.com">ccs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>libgmp-dev</exec_depend>  <!-- required for the buildserver -->
  <exec_depend>libmpfr-dev</exec_depend>  <!-- required for the buildserver -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
